FIx: image gen error